@@ -2694,6 +2694,15 @@
             </p>
           </dd>
 
+          <dt><code>Bareudp</code></dt>
+          <dd>
+            <p>
+            The Bareudp tunnel provides a generic L3 encapsulation support for
+            tunnelling different L3 protocols like MPLS, IP, NSH etc. inside a
+            UDP tunnel.
+            </p>
+          </dd>
+
         </dl>
       </column>
     </group>
@@ -2701,8 +2710,9 @@
     <group title="Tunnel Options">
       <p>
         These options apply to interfaces with <ref column="type"/> of
-        <code>geneve</code>, <code>gre</code>, <code>ip6gre</code>,
-        <code>vxlan</code>, <code>lisp</code> and <code>stt</code>.
+        <code>geneve</code>, <code>bareudp</code>, <code>gre</code>,
+        <code>ip6gre</code>, <code>vxlan</code>, <code>lisp</code> and
+        <code>stt</code>.
       </p>
 
       <p>
@@ -2714,6 +2724,8 @@
         one is matched first.  <ref column="options" key="in_key"/> is
         considered more specific than <ref column="options" key="local_ip"/> if
         a port defines one and another port defines the other.
+        <ref column="options" key="in_key"/> is not applicable for bareudp
+        tunnels. Hence it is not considered while identifying a bareudp tunnel.
       </p>
 
       <column name="options" key="remote_ip">
@@ -2780,7 +2792,10 @@
       </column>
 
       <column name="options" key="in_key">
-        <p>Optional.  The key that received packets must contain, one of:</p>
+        <p>
+          Optional, not applicable for <code>bareudp</code>. The key that
+          received packets must contain, one of:
+        </p>
 
         <ul>
           <li>
@@ -2807,7 +2822,10 @@
       </column>
 
       <column name="options" key="out_key">
-        <p>Optional.  The key to be set on outgoing packets, one of:</p>
+      <p>
+        Optional, not applicable for <code>bareudp</code>. The key to be set
+        on outgoing packets, one of:
+      </p>
 
         <ul>
           <li>
@@ -2999,10 +3017,11 @@
         </column>
       </group>
 
-      <group title="Tunnel Options: gre, ip6gre, geneve, and vxlan">
+      <group title="Tunnel Options: gre, ip6gre, geneve, bareudp and vxlan">
         <p>
           <code>gre</code>, <code>ip6gre</code>, <code>geneve</code>,
-          and <code>vxlan</code> interfaces support these options.
+          <code>bareudp</code> and <code>vxlan</code> interfaces support these
+          options.
         </p>
 
         <column name="options" key="csum" type='{"type": "boolean"}'>
@@ -3088,6 +3107,17 @@
         <p>
           ERSPAN hardware ID is a 6-bit unique identifier of an
           ERSPAN v2 engine within a system.
+        </p>
+      </column>
+    </group>
+
+    <group title="Tunnel Options: Bareudp only">
+      <column name="options" key="payload_type">
+        <p>
+           Specifies the ethertype of the l3 protocol the bareudp
+           device is tunnelling. For the tunnels which supports multiple
+           ethertypes of a l3 protocol (IP, MPLS) this field specifies the
+           protocol name as a string.
         </p>
       </column>
     </group>
